[gd_scene load_steps=4 format=3 uid="uid://b5ybefthwi2a0"]

[ext_resource type="Script" path="res://Scripts/UI/scoreboard.gd" id="1_qn1ia"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nq4hf"]
bg_color = Color(0.815686, 0.737255, 0.862745, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_cr8xr"]
Panel/styles/panel = SubResource("StyleBoxFlat_nq4hf")

[node name="Scoreboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qn1ia")
metadata/_edit_horizontal_guides_ = [50.0, 1230.0, 180.0]
metadata/_edit_vertical_guides_ = [50.0, 670.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.878431, 0.823529, 0.909804, 1)

[node name="Panel_BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_cr8xr")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -1174.0
grow_horizontal = 2
grow_vertical = 2
text = "Scoreboard"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 155
alignment = 1

[node name="rank_column" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="rank" type="Label" parent="HBoxContainer/rank_column"]
layout_mode = 2
text = "rank"

[node name="username_column" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="username" type="Label" parent="HBoxContainer/username_column"]
layout_mode = 2
text = "username"
horizontal_alignment = 1

[node name="score_column" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="score" type="Label" parent="HBoxContainer/score_column"]
layout_mode = 2
text = "score"
